@@ -2,6 +2,7 @@ Revision history for Perl extension FSA::Rules.
 
 0.30
       - Fixed broken rt.cpan.org email address.
+      - Fixed failed tests in `t/graph.t` on Windows.
 
 0.29  2011-06-20T04:55:18
       - Fixed the required Perl version number so that it can be understood
